// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fashion Man Shoes Desktop View Accessories renders final subcategory "Bonés Masculino" correctly on desktop 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <!-- Navigation -->
  <nav aria-label="Main Navigation">
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li class="menu-item">
        <button data-category="all">Início</button>
      </li>
      <li class="menu-item has-submenu">
        <button data-category="fashion-category" aria-expanded="false">Moda</button>
        <ul class="submenu" style="display: none;">
          <li class="menu-item has-submenu">
            <button data-category="man-subcategory" aria-expanded="false">Masculino</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="accessories-man-subcategory" aria-expanded="false">Acessórios</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item">
                    <button data-category="caps-man">Bonés</button>
                    <button data-category="wallets-man">Carteiras</button>
                    <button data-category="belts-man">Cintos</button>
                  </li>
                </ul>
              </li>
              <li class="menu-item has-submenu">
                <button data-category="shoes-man-subcategory" aria-expanded="false">Calçados</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item">
                    <button data-category="slippers-man">Chinelos</button>
                    <button data-category="socks-man">Meias</button>
                    <button data-category="shoes-man">Tênis</button>
                  </li>
                </ul>
              </li>
              <li class="menu-item has-submenu">
                <button data-category="clothing-man-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="shorts-man-subcategory" aria-expanded="false">Bermudas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="shorts-basic-man">Básica</button>
                        <button data-category="shorts-jeans-man">Jeans</button>
                        <button data-category="shorts-sweatshorts-man">Moletom</button>
                        <button data-category="shorts-tactel-man">Tactel</button>
                      </li>
                    </ul>
                    <button data-category="sweatshirts-man-subcategory" aria-expanded="false">Blusas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-man">Blusas</button>
                      </li>
                    </ul>
                    <button data-category="pants-man-subcategory" aria-expanded="false">Calças</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="pants-jeans-man">Jeans</button>
                        <button data-category="pants-sweatpants-man">Moletom</button>
                      </li>
                    </ul>
                    <button data-category="tshirts-man-subcategory" aria-expanded="false">Camisetas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="tshirts-casual-man">Casuais</button>
                        <button data-category="tshirts-dryfit-man">Dry Fit</button>
                        <button data-category="tshirts-polo-man">Polo</button>
                        <button data-category="dress-shirts-man">Sociais</button>
                      </li>
                    </ul>
                    <button data-category="underwear-man-subcategory" aria-expanded="false">Cuecas</button>
                    <button data-category="tank-top-man-subcategory" aria-expanded="false">Regatas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="tank-top-casual-man">Casuais</button>
                        <button data-category="tank-top-dryfit-man">Dry Fit</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li class="menu-item has-submenu">
            <button data-category="woman-subcategory" aria-expanded="false">Feminino</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="clothing-woman-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="sweatshirts-woman-subcategory" aria-expanded="false">Blusas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-woman">Blusas</button>
                      </li>
                    </ul>
                  </li>
                  <li class="menu-item has-submenu">
                    <button data-category="shorts-woman-subcategory" aria-expanded="false">Bermudas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="shorts-jeans-woman">Jeans</button>
                      </li>
                    </ul>
                  </li>
                  <li class="menu-item has-submenu">
                    <button data-category="pants-woman-subcategory" aria-expanded="false">Calças</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="pants-jeans-woman">Jeans</button>
                        <button data-category="pants-legging-woman">Legging</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li class="menu-item has-submenu">
            <button data-category="children-subcategory" aria-expanded="false">Infantil</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="clothing-children-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="sets-children-subcategory" aria-expanded="false">Conjuntos</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-set-children">Moletom</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </nav>

  <!-- Main Content -->
  <main>
    <h2 id="category-heading">Bonés Masculino</h2>
    <ul id="product-list"><li class="product-item" style="position: relative;">
          <img src="images/man/caps/2907251533-adidas.jpeg" alt="[2907251533] Adidas">
          <div class="product-details">
            <h3>[2907251533] Adidas</h3>
            
            
            <span class="price">R$&nbsp;39,00</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/2907251534-lacoste.jpeg" alt="[2907251534] Lacoste">
          <div class="product-details">
            <h3>[2907251534] Lacoste</h3>
            
            
            <span class="price">R$&nbsp;39,00</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/2907251536-los-angeles.jpeg" alt="[2907251536] Los Angeles">
          <div class="product-details">
            <h3>[2907251536] Los Angeles</h3>
            
            
            <span class="price">R$&nbsp;39,00</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/2907251532-nike.jpeg" alt="[2907251532] Nike">
          <div class="product-details">
            <h3>[2907251532] Nike</h3>
            
            
            <span class="price">R$&nbsp;39,00</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/2907251533-nike.jpeg" alt="[2907251533] Nike">
          <div class="product-details">
            <h3>[2907251533] Nike</h3>
            
            
            <span class="price">R$&nbsp;39,00</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/2907251535-nike.jpeg" alt="[2907251535] Nike">
          <div class="product-details">
            <h3>[2907251535] Nike</h3>
            
            
            <span class="price">R$&nbsp;39,00</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/0106250949-polo.jpeg" alt="[0106250949] Polo">
          <div class="product-details">
            <h3>[0106250949] Polo</h3>
            <p class="description">Cor: Verde</p>
            
            <span class="price">R$&nbsp;59,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/0106250953-polo.jpeg" alt="[0106250953] Polo">
          <div class="product-details">
            <h3>[0106250953] Polo</h3>
            <p class="description">Cor: Branca</p>
            
            <span class="price">R$&nbsp;59,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/0106250954-polo.jpeg" alt="[0106250954] Polo">
          <div class="product-details">
            <h3>[0106250954] Polo</h3>
            <p class="description">Cor: Bege</p>
            
            <span class="price">R$&nbsp;59,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/0106250955-polo.jpeg" alt="[0106250955] Polo">
          <div class="product-details">
            <h3>[0106250955] Polo</h3>
            <p class="description">Cor: Amarela</p>
            
            <span class="price">R$&nbsp;59,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/0106250956-ralph-lauren.jpeg" alt="[0106250956] Ralph Lauren">
          <div class="product-details">
            <h3>[0106250956] Ralph Lauren</h3>
            <p class="description">Cor: Cinza Escuro</p>
            
            <span class="price">R$&nbsp;59,90</span>
          </div>
        </li></ul>
  </main>

  <footer>
    <p>Versão: 5.6.0 - 0.33.228</p>
  </footer>

  <script src="scripts.js"></script>


<div id="product-modal">
      <div id="modal-content">
        <button id="modal-close">X</button>
        <div id="modal-image-container" class="modal-image-container">
          <img id="modal-image" src="" alt="">
        </div>
        <div id="modal-controls">
          <button id="prev-image">&lt;</button>
          <button id="zoom-out">-</button>
          <button id="copy-product-id">ID</button>
          <button id="zoom-in">+</button>
          <button id="next-image">&gt;</button>
          <button id="buy-product">Comprar</button>
        </div>
      </div>
    </div>"
`;

exports[`Fashion Man Shoes Desktop View Accessories renders final subcategory "Carteiras Masculina" correctly on desktop 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <!-- Navigation -->
  <nav aria-label="Main Navigation">
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li class="menu-item">
        <button data-category="all">Início</button>
      </li>
      <li class="menu-item has-submenu">
        <button data-category="fashion-category" aria-expanded="false">Moda</button>
        <ul class="submenu" style="display: none;">
          <li class="menu-item has-submenu">
            <button data-category="man-subcategory" aria-expanded="false">Masculino</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="accessories-man-subcategory" aria-expanded="false">Acessórios</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item">
                    <button data-category="caps-man">Bonés</button>
                    <button data-category="wallets-man">Carteiras</button>
                    <button data-category="belts-man">Cintos</button>
                  </li>
                </ul>
              </li>
              <li class="menu-item has-submenu">
                <button data-category="shoes-man-subcategory" aria-expanded="false">Calçados</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item">
                    <button data-category="slippers-man">Chinelos</button>
                    <button data-category="socks-man">Meias</button>
                    <button data-category="shoes-man">Tênis</button>
                  </li>
                </ul>
              </li>
              <li class="menu-item has-submenu">
                <button data-category="clothing-man-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="shorts-man-subcategory" aria-expanded="false">Bermudas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="shorts-basic-man">Básica</button>
                        <button data-category="shorts-jeans-man">Jeans</button>
                        <button data-category="shorts-sweatshorts-man">Moletom</button>
                        <button data-category="shorts-tactel-man">Tactel</button>
                      </li>
                    </ul>
                    <button data-category="sweatshirts-man-subcategory" aria-expanded="false">Blusas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-man">Blusas</button>
                      </li>
                    </ul>
                    <button data-category="pants-man-subcategory" aria-expanded="false">Calças</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="pants-jeans-man">Jeans</button>
                        <button data-category="pants-sweatpants-man">Moletom</button>
                      </li>
                    </ul>
                    <button data-category="tshirts-man-subcategory" aria-expanded="false">Camisetas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="tshirts-casual-man">Casuais</button>
                        <button data-category="tshirts-dryfit-man">Dry Fit</button>
                        <button data-category="tshirts-polo-man">Polo</button>
                        <button data-category="dress-shirts-man">Sociais</button>
                      </li>
                    </ul>
                    <button data-category="underwear-man-subcategory" aria-expanded="false">Cuecas</button>
                    <button data-category="tank-top-man-subcategory" aria-expanded="false">Regatas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="tank-top-casual-man">Casuais</button>
                        <button data-category="tank-top-dryfit-man">Dry Fit</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li class="menu-item has-submenu">
            <button data-category="woman-subcategory" aria-expanded="false">Feminino</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="clothing-woman-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="sweatshirts-woman-subcategory" aria-expanded="false">Blusas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-woman">Blusas</button>
                      </li>
                    </ul>
                  </li>
                  <li class="menu-item has-submenu">
                    <button data-category="shorts-woman-subcategory" aria-expanded="false">Bermudas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="shorts-jeans-woman">Jeans</button>
                      </li>
                    </ul>
                  </li>
                  <li class="menu-item has-submenu">
                    <button data-category="pants-woman-subcategory" aria-expanded="false">Calças</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="pants-jeans-woman">Jeans</button>
                        <button data-category="pants-legging-woman">Legging</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li class="menu-item has-submenu">
            <button data-category="children-subcategory" aria-expanded="false">Infantil</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="clothing-children-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="sets-children-subcategory" aria-expanded="false">Conjuntos</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-set-children">Moletom</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </nav>

  <!-- Main Content -->
  <main>
    <h2 id="category-heading">Carteiras Masculina</h2>
    <ul id="product-list"><li class="product-item" style="position: relative;">
          <img src="images/man/wallets/2307251256-armani-exchange.jpeg" alt="[2307251256] Armani Exchange">
          <div class="product-details">
            <h3>[2307251256] Armani Exchange</h3>
            <p class="description">Carteira Masculina, Material: Couro legítimo</p>
            <span class="size">Tamanho: Pequena</span>
            <span class="price">R$&nbsp;24,99</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/wallets/2307251257-armani-exchange-front.jpeg" alt="[2307251257] Armani Exchange">
          <div class="product-details">
            <h3>[2307251257] Armani Exchange</h3>
            <p class="description">Carteira Masculina, Material: Couro legítimo</p>
            <span class="size">Tamanho: Pequena</span>
            <span class="price">R$&nbsp;24,99</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/wallets/2307251258-oakley.jpeg" alt="[2307251258] Oakley">
          <div class="product-details">
            <h3>[2307251258] Oakley</h3>
            <p class="description">Carteira Masculina, Material: Couro legítimo</p>
            <span class="size">Tamanho: Pequena</span>
            <span class="price">R$&nbsp;24,99</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/wallets/2307251254-quicksilver.jpeg" alt="[2307251254] Quicksilver ">
          <div class="product-details">
            <h3>[2307251254] Quicksilver </h3>
            <p class="description">Carteira Masculina, Material: Couro legítimo</p>
            <span class="size">Tamanho: Pequena</span>
            <span class="price">R$&nbsp;24,99</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/wallets/2307251255-quicksilver.jpeg" alt="[2307251255] Quicksilver ">
          <div class="product-details">
            <h3>[2307251255] Quicksilver </h3>
            <p class="description">Carteira Masculina, Material: Couro legítimo</p>
            <span class="size">Tamanho: Pequena</span>
            <span class="price">R$&nbsp;24,99</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/wallets/2307251259-reserva.jpeg" alt="[2307251259] Reserva">
          <div class="product-details">
            <h3>[2307251259] Reserva</h3>
            <p class="description">Carteira Masculina, Material: Couro legítimo</p>
            <span class="size">Tamanho: Pequena</span>
            <span class="price">R$&nbsp;24,99</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/wallets/2307251250-tommy-hilfiger.jpeg" alt="[2307251250] Tommy Hilfiger ">
          <div class="product-details">
            <h3>[2307251250] Tommy Hilfiger </h3>
            <p class="description">Carteira Masculina</p>
            <span class="size">Tamanho: Pequena</span>
            <span class="price">R$&nbsp;24,99</span>
          </div>
        </li></ul>
  </main>

  <footer>
    <p>Versão: 5.6.0 - 0.33.228</p>
  </footer>

  <script src="scripts.js"></script>


<div id="product-modal">
      <div id="modal-content">
        <button id="modal-close">X</button>
        <div id="modal-image-container" class="modal-image-container">
          <img id="modal-image" src="" alt="">
        </div>
        <div id="modal-controls">
          <button id="prev-image">&lt;</button>
          <button id="zoom-out">-</button>
          <button id="copy-product-id">ID</button>
          <button id="zoom-in">+</button>
          <button id="next-image">&gt;</button>
          <button id="buy-product">Comprar</button>
        </div>
      </div>
    </div>"
`;

exports[`Fashion Man Shoes Desktop View Accessories renders final subcategory "Cintos Masculino" correctly on desktop 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <!-- Navigation -->
  <nav aria-label="Main Navigation">
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li class="menu-item">
        <button data-category="all">Início</button>
      </li>
      <li class="menu-item has-submenu">
        <button data-category="fashion-category" aria-expanded="false">Moda</button>
        <ul class="submenu" style="display: none;">
          <li class="menu-item has-submenu">
            <button data-category="man-subcategory" aria-expanded="false">Masculino</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="accessories-man-subcategory" aria-expanded="false">Acessórios</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item">
                    <button data-category="caps-man">Bonés</button>
                    <button data-category="wallets-man">Carteiras</button>
                    <button data-category="belts-man">Cintos</button>
                  </li>
                </ul>
              </li>
              <li class="menu-item has-submenu">
                <button data-category="shoes-man-subcategory" aria-expanded="false">Calçados</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item">
                    <button data-category="slippers-man">Chinelos</button>
                    <button data-category="socks-man">Meias</button>
                    <button data-category="shoes-man">Tênis</button>
                  </li>
                </ul>
              </li>
              <li class="menu-item has-submenu">
                <button data-category="clothing-man-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="shorts-man-subcategory" aria-expanded="false">Bermudas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="shorts-basic-man">Básica</button>
                        <button data-category="shorts-jeans-man">Jeans</button>
                        <button data-category="shorts-sweatshorts-man">Moletom</button>
                        <button data-category="shorts-tactel-man">Tactel</button>
                      </li>
                    </ul>
                    <button data-category="sweatshirts-man-subcategory" aria-expanded="false">Blusas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-man">Blusas</button>
                      </li>
                    </ul>
                    <button data-category="pants-man-subcategory" aria-expanded="false">Calças</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="pants-jeans-man">Jeans</button>
                        <button data-category="pants-sweatpants-man">Moletom</button>
                      </li>
                    </ul>
                    <button data-category="tshirts-man-subcategory" aria-expanded="false">Camisetas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="tshirts-casual-man">Casuais</button>
                        <button data-category="tshirts-dryfit-man">Dry Fit</button>
                        <button data-category="tshirts-polo-man">Polo</button>
                        <button data-category="dress-shirts-man">Sociais</button>
                      </li>
                    </ul>
                    <button data-category="underwear-man-subcategory" aria-expanded="false">Cuecas</button>
                    <button data-category="tank-top-man-subcategory" aria-expanded="false">Regatas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="tank-top-casual-man">Casuais</button>
                        <button data-category="tank-top-dryfit-man">Dry Fit</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li class="menu-item has-submenu">
            <button data-category="woman-subcategory" aria-expanded="false">Feminino</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="clothing-woman-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="sweatshirts-woman-subcategory" aria-expanded="false">Blusas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-woman">Blusas</button>
                      </li>
                    </ul>
                  </li>
                  <li class="menu-item has-submenu">
                    <button data-category="shorts-woman-subcategory" aria-expanded="false">Bermudas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="shorts-jeans-woman">Jeans</button>
                      </li>
                    </ul>
                  </li>
                  <li class="menu-item has-submenu">
                    <button data-category="pants-woman-subcategory" aria-expanded="false">Calças</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="pants-jeans-woman">Jeans</button>
                        <button data-category="pants-legging-woman">Legging</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li class="menu-item has-submenu">
            <button data-category="children-subcategory" aria-expanded="false">Infantil</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="clothing-children-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="sets-children-subcategory" aria-expanded="false">Conjuntos</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-set-children">Moletom</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </nav>

  <!-- Main Content -->
  <main>
    <h2 id="category-heading">Cintos Masculino</h2>
    <ul id="product-list"><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251157-gucci-front.jpeg" alt="[2307251157] Gucci">
          <div class="product-details">
            <h3>[2307251157] Gucci</h3>
            <p class="description">Cinto Social Masculino, Material: Couro</p>
            <span class="size">Tamanho: Tamanho único</span>
            <span class="price">R$&nbsp;89,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251158-louis-vuitton-front.jpeg" alt="[2307251158] Louis Vuitton">
          <div class="product-details">
            <h3>[2307251158] Louis Vuitton</h3>
            <p class="description">Cinto Social Masculino, Material: Couro</p>
            <span class="size">Tamanho: Tamanho único</span>
            <span class="price">R$&nbsp;89,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251156-adidas-front.jpeg" alt="[2307251156] Adidas">
          <div class="product-details">
            <h3>[2307251156] Adidas</h3>
            <p class="description">Cinto Elástico Masculino, Cor: Marrom</p>
            <span class="size">Tamanho: GG</span>
            <span class="price">R$&nbsp;34,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251150-lacoste-front.jpeg" alt="[2307251150] Lacoste">
          <div class="product-details">
            <h3>[2307251150] Lacoste</h3>
            <p class="description">Cinto Elástico Masculino, Cor: Azul Marinho e Bege</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;34,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251152-nike-front.jpeg" alt="[2307251152] Nike">
          <div class="product-details">
            <h3>[2307251152] Nike</h3>
            <p class="description">Cinto Elástico Masculino, Cor: Azul Marinho e Bege</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;34,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251154-nike-front.jpeg" alt="[2307251154] Nike">
          <div class="product-details">
            <h3>[2307251154] Nike</h3>
            <p class="description">Cinto Elástico Masculino, Cor: Azul Marinho com Listras</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;34,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251151-nike-front.jpeg" alt="[2307251151] Nike">
          <div class="product-details">
            <h3>[2307251151] Nike</h3>
            <p class="description">Cinto Elástico Masculino, Cor: Verde Militar</p>
            <span class="size">Tamanho: G</span>
            <span class="price">R$&nbsp;34,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251153-nike-front.jpeg" alt="[2307251153] Nike">
          <div class="product-details">
            <h3>[2307251153] Nike</h3>
            <p class="description">Cinto Elástico Masculino, Cor: Preto</p>
            <span class="size">Tamanho: GG</span>
            <span class="price">R$&nbsp;34,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251155-quicksilver-front.jpeg" alt="[2307251155] Quicksilver">
          <div class="product-details">
            <h3>[2307251155] Quicksilver</h3>
            <p class="description">Cinto Elástico Masculino, Cor: Azul Marinho</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;34,90</span>
          </div>
        </li></ul>
  </main>

  <footer>
    <p>Versão: 5.6.0 - 0.33.228</p>
  </footer>

  <script src="scripts.js"></script>


<div id="product-modal">
      <div id="modal-content">
        <button id="modal-close">X</button>
        <div id="modal-image-container" class="modal-image-container">
          <img id="modal-image" src="" alt="">
        </div>
        <div id="modal-controls">
          <button id="prev-image">&lt;</button>
          <button id="zoom-out">-</button>
          <button id="copy-product-id">ID</button>
          <button id="zoom-in">+</button>
          <button id="next-image">&gt;</button>
          <button id="buy-product">Comprar</button>
        </div>
      </div>
    </div>"
`;

exports[`Fashion Man Shoes Mobile View Accessories renders final subcategory "Bonés Masculino" correctly on mobile 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <!-- Navigation -->
  <nav aria-label="Main Navigation" class="">
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li class="menu-item">
        <button data-category="all">Início</button>
      </li>
      <li class="menu-item has-submenu">
        <button data-category="fashion-category" aria-expanded="false">Moda</button>
        <ul class="submenu" style="display: none;">
          <li class="menu-item has-submenu">
            <button data-category="man-subcategory" aria-expanded="false">Masculino</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="accessories-man-subcategory" aria-expanded="false">Acessórios</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item">
                    <button data-category="caps-man">Bonés</button>
                    <button data-category="wallets-man">Carteiras</button>
                    <button data-category="belts-man">Cintos</button>
                  </li>
                </ul>
              </li>
              <li class="menu-item has-submenu">
                <button data-category="shoes-man-subcategory" aria-expanded="false">Calçados</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item">
                    <button data-category="slippers-man">Chinelos</button>
                    <button data-category="socks-man">Meias</button>
                    <button data-category="shoes-man">Tênis</button>
                  </li>
                </ul>
              </li>
              <li class="menu-item has-submenu">
                <button data-category="clothing-man-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="shorts-man-subcategory" aria-expanded="false">Bermudas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="shorts-basic-man">Básica</button>
                        <button data-category="shorts-jeans-man">Jeans</button>
                        <button data-category="shorts-sweatshorts-man">Moletom</button>
                        <button data-category="shorts-tactel-man">Tactel</button>
                      </li>
                    </ul>
                    <button data-category="sweatshirts-man-subcategory" aria-expanded="false">Blusas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-man">Blusas</button>
                      </li>
                    </ul>
                    <button data-category="pants-man-subcategory" aria-expanded="false">Calças</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="pants-jeans-man">Jeans</button>
                        <button data-category="pants-sweatpants-man">Moletom</button>
                      </li>
                    </ul>
                    <button data-category="tshirts-man-subcategory" aria-expanded="false">Camisetas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="tshirts-casual-man">Casuais</button>
                        <button data-category="tshirts-dryfit-man">Dry Fit</button>
                        <button data-category="tshirts-polo-man">Polo</button>
                        <button data-category="dress-shirts-man">Sociais</button>
                      </li>
                    </ul>
                    <button data-category="underwear-man-subcategory" aria-expanded="false">Cuecas</button>
                    <button data-category="tank-top-man-subcategory" aria-expanded="false">Regatas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="tank-top-casual-man">Casuais</button>
                        <button data-category="tank-top-dryfit-man">Dry Fit</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li class="menu-item has-submenu">
            <button data-category="woman-subcategory" aria-expanded="false">Feminino</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="clothing-woman-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="sweatshirts-woman-subcategory" aria-expanded="false">Blusas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-woman">Blusas</button>
                      </li>
                    </ul>
                  </li>
                  <li class="menu-item has-submenu">
                    <button data-category="shorts-woman-subcategory" aria-expanded="false">Bermudas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="shorts-jeans-woman">Jeans</button>
                      </li>
                    </ul>
                  </li>
                  <li class="menu-item has-submenu">
                    <button data-category="pants-woman-subcategory" aria-expanded="false">Calças</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="pants-jeans-woman">Jeans</button>
                        <button data-category="pants-legging-woman">Legging</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li class="menu-item has-submenu">
            <button data-category="children-subcategory" aria-expanded="false">Infantil</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="clothing-children-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="sets-children-subcategory" aria-expanded="false">Conjuntos</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-set-children">Moletom</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </nav>

  <!-- Main Content -->
  <main>
    <h2 id="category-heading">Bonés Masculino</h2>
    <ul id="product-list"><li class="product-item" style="position: relative;">
          <img src="images/man/caps/2907251533-adidas.jpeg" alt="[2907251533] Adidas">
          <div class="product-details">
            <h3>[2907251533] Adidas</h3>
            
            
            <span class="price">R$&nbsp;39,00</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/2907251534-lacoste.jpeg" alt="[2907251534] Lacoste">
          <div class="product-details">
            <h3>[2907251534] Lacoste</h3>
            
            
            <span class="price">R$&nbsp;39,00</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/2907251536-los-angeles.jpeg" alt="[2907251536] Los Angeles">
          <div class="product-details">
            <h3>[2907251536] Los Angeles</h3>
            
            
            <span class="price">R$&nbsp;39,00</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/2907251532-nike.jpeg" alt="[2907251532] Nike">
          <div class="product-details">
            <h3>[2907251532] Nike</h3>
            
            
            <span class="price">R$&nbsp;39,00</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/2907251533-nike.jpeg" alt="[2907251533] Nike">
          <div class="product-details">
            <h3>[2907251533] Nike</h3>
            
            
            <span class="price">R$&nbsp;39,00</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/2907251535-nike.jpeg" alt="[2907251535] Nike">
          <div class="product-details">
            <h3>[2907251535] Nike</h3>
            
            
            <span class="price">R$&nbsp;39,00</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/0106250949-polo.jpeg" alt="[0106250949] Polo">
          <div class="product-details">
            <h3>[0106250949] Polo</h3>
            <p class="description">Cor: Verde</p>
            
            <span class="price">R$&nbsp;59,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/0106250953-polo.jpeg" alt="[0106250953] Polo">
          <div class="product-details">
            <h3>[0106250953] Polo</h3>
            <p class="description">Cor: Branca</p>
            
            <span class="price">R$&nbsp;59,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/0106250954-polo.jpeg" alt="[0106250954] Polo">
          <div class="product-details">
            <h3>[0106250954] Polo</h3>
            <p class="description">Cor: Bege</p>
            
            <span class="price">R$&nbsp;59,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/0106250955-polo.jpeg" alt="[0106250955] Polo">
          <div class="product-details">
            <h3>[0106250955] Polo</h3>
            <p class="description">Cor: Amarela</p>
            
            <span class="price">R$&nbsp;59,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/caps/0106250956-ralph-lauren.jpeg" alt="[0106250956] Ralph Lauren">
          <div class="product-details">
            <h3>[0106250956] Ralph Lauren</h3>
            <p class="description">Cor: Cinza Escuro</p>
            
            <span class="price">R$&nbsp;59,90</span>
          </div>
        </li></ul>
  </main>

  <footer>
    <p>Versão: 5.6.0 - 0.33.228</p>
  </footer>

  <script src="scripts.js"></script>


<div id="product-modal">
      <div id="modal-content">
        <button id="modal-close">X</button>
        <div id="modal-image-container" class="modal-image-container">
          <img id="modal-image" src="" alt="">
        </div>
        <div id="modal-controls">
          <button id="prev-image">&lt;</button>
          <button id="zoom-out">-</button>
          <button id="copy-product-id">ID</button>
          <button id="zoom-in">+</button>
          <button id="next-image">&gt;</button>
          <button id="buy-product">Comprar</button>
        </div>
      </div>
    </div>"
`;

exports[`Fashion Man Shoes Mobile View Accessories renders final subcategory "Carteiras Masculina" correctly on mobile 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <!-- Navigation -->
  <nav aria-label="Main Navigation" class="">
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li class="menu-item">
        <button data-category="all">Início</button>
      </li>
      <li class="menu-item has-submenu">
        <button data-category="fashion-category" aria-expanded="false">Moda</button>
        <ul class="submenu" style="display: none;">
          <li class="menu-item has-submenu">
            <button data-category="man-subcategory" aria-expanded="false">Masculino</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="accessories-man-subcategory" aria-expanded="false">Acessórios</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item">
                    <button data-category="caps-man">Bonés</button>
                    <button data-category="wallets-man">Carteiras</button>
                    <button data-category="belts-man">Cintos</button>
                  </li>
                </ul>
              </li>
              <li class="menu-item has-submenu">
                <button data-category="shoes-man-subcategory" aria-expanded="false">Calçados</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item">
                    <button data-category="slippers-man">Chinelos</button>
                    <button data-category="socks-man">Meias</button>
                    <button data-category="shoes-man">Tênis</button>
                  </li>
                </ul>
              </li>
              <li class="menu-item has-submenu">
                <button data-category="clothing-man-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="shorts-man-subcategory" aria-expanded="false">Bermudas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="shorts-basic-man">Básica</button>
                        <button data-category="shorts-jeans-man">Jeans</button>
                        <button data-category="shorts-sweatshorts-man">Moletom</button>
                        <button data-category="shorts-tactel-man">Tactel</button>
                      </li>
                    </ul>
                    <button data-category="sweatshirts-man-subcategory" aria-expanded="false">Blusas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-man">Blusas</button>
                      </li>
                    </ul>
                    <button data-category="pants-man-subcategory" aria-expanded="false">Calças</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="pants-jeans-man">Jeans</button>
                        <button data-category="pants-sweatpants-man">Moletom</button>
                      </li>
                    </ul>
                    <button data-category="tshirts-man-subcategory" aria-expanded="false">Camisetas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="tshirts-casual-man">Casuais</button>
                        <button data-category="tshirts-dryfit-man">Dry Fit</button>
                        <button data-category="tshirts-polo-man">Polo</button>
                        <button data-category="dress-shirts-man">Sociais</button>
                      </li>
                    </ul>
                    <button data-category="underwear-man-subcategory" aria-expanded="false">Cuecas</button>
                    <button data-category="tank-top-man-subcategory" aria-expanded="false">Regatas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="tank-top-casual-man">Casuais</button>
                        <button data-category="tank-top-dryfit-man">Dry Fit</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li class="menu-item has-submenu">
            <button data-category="woman-subcategory" aria-expanded="false">Feminino</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="clothing-woman-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="sweatshirts-woman-subcategory" aria-expanded="false">Blusas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-woman">Blusas</button>
                      </li>
                    </ul>
                  </li>
                  <li class="menu-item has-submenu">
                    <button data-category="shorts-woman-subcategory" aria-expanded="false">Bermudas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="shorts-jeans-woman">Jeans</button>
                      </li>
                    </ul>
                  </li>
                  <li class="menu-item has-submenu">
                    <button data-category="pants-woman-subcategory" aria-expanded="false">Calças</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="pants-jeans-woman">Jeans</button>
                        <button data-category="pants-legging-woman">Legging</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li class="menu-item has-submenu">
            <button data-category="children-subcategory" aria-expanded="false">Infantil</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="clothing-children-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="sets-children-subcategory" aria-expanded="false">Conjuntos</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-set-children">Moletom</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </nav>

  <!-- Main Content -->
  <main>
    <h2 id="category-heading">Carteiras Masculina</h2>
    <ul id="product-list"><li class="product-item" style="position: relative;">
          <img src="images/man/wallets/2307251256-armani-exchange.jpeg" alt="[2307251256] Armani Exchange">
          <div class="product-details">
            <h3>[2307251256] Armani Exchange</h3>
            <p class="description">Carteira Masculina, Material: Couro legítimo</p>
            <span class="size">Tamanho: Pequena</span>
            <span class="price">R$&nbsp;24,99</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/wallets/2307251257-armani-exchange-front.jpeg" alt="[2307251257] Armani Exchange">
          <div class="product-details">
            <h3>[2307251257] Armani Exchange</h3>
            <p class="description">Carteira Masculina, Material: Couro legítimo</p>
            <span class="size">Tamanho: Pequena</span>
            <span class="price">R$&nbsp;24,99</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/wallets/2307251258-oakley.jpeg" alt="[2307251258] Oakley">
          <div class="product-details">
            <h3>[2307251258] Oakley</h3>
            <p class="description">Carteira Masculina, Material: Couro legítimo</p>
            <span class="size">Tamanho: Pequena</span>
            <span class="price">R$&nbsp;24,99</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/wallets/2307251254-quicksilver.jpeg" alt="[2307251254] Quicksilver ">
          <div class="product-details">
            <h3>[2307251254] Quicksilver </h3>
            <p class="description">Carteira Masculina, Material: Couro legítimo</p>
            <span class="size">Tamanho: Pequena</span>
            <span class="price">R$&nbsp;24,99</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/wallets/2307251255-quicksilver.jpeg" alt="[2307251255] Quicksilver ">
          <div class="product-details">
            <h3>[2307251255] Quicksilver </h3>
            <p class="description">Carteira Masculina, Material: Couro legítimo</p>
            <span class="size">Tamanho: Pequena</span>
            <span class="price">R$&nbsp;24,99</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/wallets/2307251259-reserva.jpeg" alt="[2307251259] Reserva">
          <div class="product-details">
            <h3>[2307251259] Reserva</h3>
            <p class="description">Carteira Masculina, Material: Couro legítimo</p>
            <span class="size">Tamanho: Pequena</span>
            <span class="price">R$&nbsp;24,99</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/wallets/2307251250-tommy-hilfiger.jpeg" alt="[2307251250] Tommy Hilfiger ">
          <div class="product-details">
            <h3>[2307251250] Tommy Hilfiger </h3>
            <p class="description">Carteira Masculina</p>
            <span class="size">Tamanho: Pequena</span>
            <span class="price">R$&nbsp;24,99</span>
          </div>
        </li></ul>
  </main>

  <footer>
    <p>Versão: 5.6.0 - 0.33.228</p>
  </footer>

  <script src="scripts.js"></script>


<div id="product-modal">
      <div id="modal-content">
        <button id="modal-close">X</button>
        <div id="modal-image-container" class="modal-image-container">
          <img id="modal-image" src="" alt="">
        </div>
        <div id="modal-controls">
          <button id="prev-image">&lt;</button>
          <button id="zoom-out">-</button>
          <button id="copy-product-id">ID</button>
          <button id="zoom-in">+</button>
          <button id="next-image">&gt;</button>
          <button id="buy-product">Comprar</button>
        </div>
      </div>
    </div>"
`;

exports[`Fashion Man Shoes Mobile View Accessories renders final subcategory "Cintos Masculino" correctly on mobile 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <!-- Navigation -->
  <nav aria-label="Main Navigation" class="">
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li class="menu-item">
        <button data-category="all">Início</button>
      </li>
      <li class="menu-item has-submenu">
        <button data-category="fashion-category" aria-expanded="false">Moda</button>
        <ul class="submenu" style="display: none;">
          <li class="menu-item has-submenu">
            <button data-category="man-subcategory" aria-expanded="false">Masculino</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="accessories-man-subcategory" aria-expanded="false">Acessórios</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item">
                    <button data-category="caps-man">Bonés</button>
                    <button data-category="wallets-man">Carteiras</button>
                    <button data-category="belts-man">Cintos</button>
                  </li>
                </ul>
              </li>
              <li class="menu-item has-submenu">
                <button data-category="shoes-man-subcategory" aria-expanded="false">Calçados</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item">
                    <button data-category="slippers-man">Chinelos</button>
                    <button data-category="socks-man">Meias</button>
                    <button data-category="shoes-man">Tênis</button>
                  </li>
                </ul>
              </li>
              <li class="menu-item has-submenu">
                <button data-category="clothing-man-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="shorts-man-subcategory" aria-expanded="false">Bermudas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="shorts-basic-man">Básica</button>
                        <button data-category="shorts-jeans-man">Jeans</button>
                        <button data-category="shorts-sweatshorts-man">Moletom</button>
                        <button data-category="shorts-tactel-man">Tactel</button>
                      </li>
                    </ul>
                    <button data-category="sweatshirts-man-subcategory" aria-expanded="false">Blusas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-man">Blusas</button>
                      </li>
                    </ul>
                    <button data-category="pants-man-subcategory" aria-expanded="false">Calças</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="pants-jeans-man">Jeans</button>
                        <button data-category="pants-sweatpants-man">Moletom</button>
                      </li>
                    </ul>
                    <button data-category="tshirts-man-subcategory" aria-expanded="false">Camisetas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="tshirts-casual-man">Casuais</button>
                        <button data-category="tshirts-dryfit-man">Dry Fit</button>
                        <button data-category="tshirts-polo-man">Polo</button>
                        <button data-category="dress-shirts-man">Sociais</button>
                      </li>
                    </ul>
                    <button data-category="underwear-man-subcategory" aria-expanded="false">Cuecas</button>
                    <button data-category="tank-top-man-subcategory" aria-expanded="false">Regatas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="tank-top-casual-man">Casuais</button>
                        <button data-category="tank-top-dryfit-man">Dry Fit</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li class="menu-item has-submenu">
            <button data-category="woman-subcategory" aria-expanded="false">Feminino</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="clothing-woman-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="sweatshirts-woman-subcategory" aria-expanded="false">Blusas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-woman">Blusas</button>
                      </li>
                    </ul>
                  </li>
                  <li class="menu-item has-submenu">
                    <button data-category="shorts-woman-subcategory" aria-expanded="false">Bermudas</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="shorts-jeans-woman">Jeans</button>
                      </li>
                    </ul>
                  </li>
                  <li class="menu-item has-submenu">
                    <button data-category="pants-woman-subcategory" aria-expanded="false">Calças</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="pants-jeans-woman">Jeans</button>
                        <button data-category="pants-legging-woman">Legging</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li class="menu-item has-submenu">
            <button data-category="children-subcategory" aria-expanded="false">Infantil</button>
            <ul class="submenu" style="display: none;">
              <li class="menu-item has-submenu">
                <button data-category="clothing-children-subcategory" aria-expanded="false">Roupas</button>
                <ul class="submenu" style="display: none;">
                  <li class="menu-item has-submenu">
                    <button data-category="sets-children-subcategory" aria-expanded="false">Conjuntos</button>
                    <ul class="submenu" style="display: none;">
                      <li class="menu-item">
                        <button data-category="sweatshirts-set-children">Moletom</button>
                      </li>
                    </ul>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </nav>

  <!-- Main Content -->
  <main>
    <h2 id="category-heading">Cintos Masculino</h2>
    <ul id="product-list"><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251157-gucci-front.jpeg" alt="[2307251157] Gucci">
          <div class="product-details">
            <h3>[2307251157] Gucci</h3>
            <p class="description">Cinto Social Masculino, Material: Couro</p>
            <span class="size">Tamanho: Tamanho único</span>
            <span class="price">R$&nbsp;89,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251158-louis-vuitton-front.jpeg" alt="[2307251158] Louis Vuitton">
          <div class="product-details">
            <h3>[2307251158] Louis Vuitton</h3>
            <p class="description">Cinto Social Masculino, Material: Couro</p>
            <span class="size">Tamanho: Tamanho único</span>
            <span class="price">R$&nbsp;89,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251156-adidas-front.jpeg" alt="[2307251156] Adidas">
          <div class="product-details">
            <h3>[2307251156] Adidas</h3>
            <p class="description">Cinto Elástico Masculino, Cor: Marrom</p>
            <span class="size">Tamanho: GG</span>
            <span class="price">R$&nbsp;34,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251150-lacoste-front.jpeg" alt="[2307251150] Lacoste">
          <div class="product-details">
            <h3>[2307251150] Lacoste</h3>
            <p class="description">Cinto Elástico Masculino, Cor: Azul Marinho e Bege</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;34,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251152-nike-front.jpeg" alt="[2307251152] Nike">
          <div class="product-details">
            <h3>[2307251152] Nike</h3>
            <p class="description">Cinto Elástico Masculino, Cor: Azul Marinho e Bege</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;34,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251154-nike-front.jpeg" alt="[2307251154] Nike">
          <div class="product-details">
            <h3>[2307251154] Nike</h3>
            <p class="description">Cinto Elástico Masculino, Cor: Azul Marinho com Listras</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;34,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251151-nike-front.jpeg" alt="[2307251151] Nike">
          <div class="product-details">
            <h3>[2307251151] Nike</h3>
            <p class="description">Cinto Elástico Masculino, Cor: Verde Militar</p>
            <span class="size">Tamanho: G</span>
            <span class="price">R$&nbsp;34,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251153-nike-front.jpeg" alt="[2307251153] Nike">
          <div class="product-details">
            <h3>[2307251153] Nike</h3>
            <p class="description">Cinto Elástico Masculino, Cor: Preto</p>
            <span class="size">Tamanho: GG</span>
            <span class="price">R$&nbsp;34,90</span>
          </div>
        </li><li class="product-item" style="position: relative;">
          <img src="images/man/belts/2307251155-quicksilver-front.jpeg" alt="[2307251155] Quicksilver">
          <div class="product-details">
            <h3>[2307251155] Quicksilver</h3>
            <p class="description">Cinto Elástico Masculino, Cor: Azul Marinho</p>
            <span class="size">Tamanho: M</span>
            <span class="price">R$&nbsp;34,90</span>
          </div>
        </li></ul>
  </main>

  <footer>
    <p>Versão: 5.6.0 - 0.33.228</p>
  </footer>

  <script src="scripts.js"></script>


<div id="product-modal">
      <div id="modal-content">
        <button id="modal-close">X</button>
        <div id="modal-image-container" class="modal-image-container">
          <img id="modal-image" src="" alt="">
        </div>
        <div id="modal-controls">
          <button id="prev-image">&lt;</button>
          <button id="zoom-out">-</button>
          <button id="copy-product-id">ID</button>
          <button id="zoom-in">+</button>
          <button id="next-image">&gt;</button>
          <button id="buy-product">Comprar</button>
        </div>
      </div>
    </div>"
`;
